# bachelor-thesis-code

./: .gitignore  .gitmodules  README.md  detect_droplets.py  evaluate_hough.py  evaluate_model.py  generate_pseudo_labels.py  get_label_dist.py  normalize_images.py  pyproject.toml  relabel.py  remove_unlabeled.py  requirements.txt  run.sh  show_images.py  start_training.sh  trace_model.py  train.py  validate_model.py
src/: .datasets.py.swp  .datasets.py.un~  .run.sh.un~  .train.py.un~  cityscapes_dataset.py  datasets.py  detection.py  losses.py  masks.py  model.py  normalize.py  run.sh  run.sh~  test_model.py  train.py  train.py~  transforms.py  utils.py
src/app/: __init__.py  procedures.py
src/lib/: mean_teacher
